# synth-price-monitor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_scraper.py
.githooks/: pre-commit
.github/workflows/: e2e-tests.yml  integration-tests.yml  scrape.yml  unit-tests.yml
.streamlit/: config.toml
dashboard/: app.py  scraper_sync.py
scripts/: generate_sample_data.py
src/: circuit_breaker.py  database.py  main.py  models.py  notifications.py  pipeline.py
src/scrapers/: base.py  gear4music.py  juno.py  registry.py  thomann.py
tests/: README.md  test_scrapers.py
tests/e2e/: conftest.py  mock_services.py  seed_test_data.py  test_alerts.py  test_ui.py
tests/integration/: conftest.py  test_alert_pipeline.py  test_notifications.py
tests/unit/: test_scrapers.py  test_should_alert.py
